# flutter_rust_lab

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/my_rust_app/: MainActivity.kt
doc/: 01_json_performance_analysis.md  02_zero_copy_and_streaming_walkthrough.md  03_rust_vs_dart_exploration_blog.md
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: json_benchmark_page.dart  main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: simple.dart  simple.freezed.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_my_rust_app.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_my_rust_app.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
